packages/js/product-editor/src/components/custom-fields/style.scss
@import "./empty-state/style.scss";
@import "./edit-modal/style.scss";

.woocommerce-product-custom-fields {
	&__table {
		width: 100%;

		thead {
			@include screen-reader-only();
		}

		&-row {
			display: grid;
			grid-template-columns: 1fr 1fr 100px;
			gap: $grid-unit-30;
			border-bottom: 1px solid $gray-200;

			&:last-child {
				border-bottom: none;
			}
		}

		&-datacell {
			padding-top: $grid-unit-30;
			padding-bottom: $grid-unit-30;

			&:last-child {
				display: flex;
				align-items: center;
				justify-content: flex-end;
				padding: 0;
				gap: $grid-unit;
			}
		}
	}
}

